# simple-cmake-sdl2-ffmpeg

./: CMakeLists.txt  README.md  compile.sh
include/: another.h  header.h
src/: another.cpp  main.cpp
